--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mysql2": "^3.11.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
